General: using bootstrap button groups in FB settings section in playlist and pagination for search view.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -460,7 +460,7 @@ body #page-header #header-wrapper #credit {
 .pagination-container .page-label h2 {
   text-align: left; }
 
-.pagination-container .pagination {
+.pagination-container .pagination, .pagination-container .btn-page-group-container {
   text-align: right; }
 
 .pagination-container .btn-change-page {
