--- a/src/partials/playlist/playlist.html
+++ b/src/partials/playlist/playlist.html
@@ -4,11 +4,13 @@
 	<div class="playlist-section-options">
 		<p ng-if="playlist.isUsingFBase && playlist.segName">Hello <span class="emph">{{ playlist.segName }}</span>!</p>
 		<p ng-if="!playlist.segName">Using <span class="emph">Local Storage</span></p>
-		<button class="btn btn-default btn-storage" ng-if="playlist.isUsingFBase" ng-click="playlist.fbaseSave()">
-			<span ng-if="!playlist.segName">Connect to Firebase</span>
-			<span ng-if="playlist.segName">Disconnect from Firebase</span>
-		</button>
-		<button class="btn btn-default btn-storage" ng-click="playlist.handleStorageSettings()">Manage Storage Settings</button>
+		<div class="btn-group" role="group" aria-label="...">
+			<button class="btn btn-default btn-storage" ng-if="playlist.isUsingFBase" ng-click="playlist.fbaseSave()">
+				<span ng-if="!playlist.segName">Connect to Firebase</span>
+				<span ng-if="playlist.segName">Disconnect from Firebase</span>
+			</button>
+			<button class="btn btn-default btn-storage" ng-click="playlist.handleStorageSettings()">Manage Storage Settings</button>
+		</div>
 	</div>
 	<div class="row playlist-section-header">
 		<div class="col-xs-8">
