--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -261,7 +261,7 @@
 			text-align: left;
 		}
 	}
-	.pagination {
+	.pagination, .btn-page-group-container {
 		text-align: right;
 	}
 	.btn-change-page {
