Search Results: layout updates relating to pagination section.

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -457,14 +457,15 @@ body #page-header #header-wrapper #credit {
   .search-order-arrow-container .flipped {
     transform: rotateX(180deg); }
 
-.pagination-container .page-label h2 {
-  text-align: left; }
-
-.pagination-container .pagination, .pagination-container .btn-page-group-container {
-  text-align: right; }
-
-.pagination-container .btn-change-page {
-  padding: 0.35em; }
+.pagination-container {
+  margin-bottom: 1em; }
+  .pagination-container .page-label h2 {
+    text-align: left;
+    margin: 0; }
+  .pagination-container .pagination, .pagination-container .btn-page-group-container {
+    text-align: right; }
+  .pagination-container .btn-change-page {
+    padding: 0.35em; }
 
 .page-selector-container {
   position: relative; }
