--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -256,9 +256,11 @@
 }
 
 .pagination-container {
+	margin-bottom: 1em;
 	.page-label {
 		h2 {
 			text-align: left;
+			margin: 0;
 		}
 	}
 	.pagination, .btn-page-group-container {
