Search Bar: responsive layout updates to advanced form. Playlist Settings Modal: minor layout tweaks. General: code cleanup.

--- a/src/partials/playlist/playlist-partials/modals/storage-settings-modal.html
+++ b/src/partials/playlist/playlist-partials/modals/storage-settings-modal.html
@@ -2,7 +2,7 @@
     <div class="modal-body modal-body-saved-search">
         <h2>Other Settings</h2>
         <section>
-            <label for="warnActive">Warn me before permanently removing items:</label>
+            <label class="modal-body__label" for="warnActive">Warn me before permanently removing items:</label>
             <input name="warnActive" ng-model="storageSettingsModal.warnVal" type="checkbox" class="checkbox-settings-modal">
             <p>You will be notified before removing ALL videos or searches either way.</p>
         </section>
