--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -35,7 +35,7 @@
 
 #map {
 	width: 100%;
-	height: 15em;
+	height: 17em;
 	display: block;
 }
 
@@ -124,7 +124,7 @@
 			vertical-align: middle;
 			display: inline-block;
 			.sub-cluster {
-				margin: 1em 0;
+				margin: 1em;
 				label {
 					text-align: left;
 				}
@@ -134,7 +134,6 @@
 			}
 		}
 		#translate-wrapper {
-			display: block;
 			#translate-select {
 				margin: 0 auto;
 				max-width: 11em;
@@ -367,7 +366,6 @@
 			#translate-wrapper {
 				text-align: left;
 				.sub-cluster {
-					display: inline-block;
 					margin-left: 0.5em;
 					text-align: center;
 				}	
@@ -393,11 +391,12 @@
 	}
 }
 
+// TODO: Can we remove?
 @media screen and (min-width: 594px){
 	#advanced-search {
 		#form-advanced-video-search{
 			#translate-wrapper {
-				display: inline-block;	
+				// display: inline-block;
 			}
 		}
 	}
@@ -438,12 +437,13 @@
 	}
 }
 
+// TODO: Can we remove?
 @media screen and (min-width: 786px){
 	#advanced-search {
 		#form-advanced-video-search{
 			#translate-wrapper {
 				.sub-cluster {
-					display: block;
+					// display: block;
 				}	
 			}
 		}
@@ -483,7 +483,6 @@
 	}
 	
 	#map {
-		width: 60%;
 		margin: 0 auto;
 	}
 	#form-search {
@@ -500,6 +499,12 @@
 		margin-bottom: 3em;
 		#form-advanced-video-search {
 			display: inline;
+			.cluster {
+				.sub-cluster {
+					margin-left: 4em;
+					margin-right: 4em;
+				}
+			}
 		}
 		#form-channel-search {
 			display: inline-block;
