General: updated modal footers - swapped button order. Playlist: content/wording updates.

--- a/src/partials/playlist/playlist-partials/modals/danger-modal.html
+++ b/src/partials/playlist/playlist-partials/modals/danger-modal.html
@@ -1,9 +1,9 @@
 <form ng-submit="dangerModal.ok()">
 	<div class="modal-body">
-	    <p>Caution! This will permanently erased all of your saved searches. Are you sure you want to proceed?</p>
+	    <p>Caution! This will permanently erase all of your saved searches. Are you sure you want to proceed?</p>
 	</div>
 	<div class="modal-footer">
-	    <button autofocus class="btn btn-primary" type="submit">OK</button>
-	    <button class="btn btn-warning" type="button" ng-click="dangerModal.cancel()">Cancel</button>
+		<button class="btn btn-warning" type="button" ng-click="dangerModal.cancel()">Cancel</button>
+		<button autofocus class="btn btn-primary" type="submit">OK</button>
 	</div>
 </form>
