--- a/src/partials/search/search-partials/modals/error-modal.html
+++ b/src/partials/search/search-partials/modals/error-modal.html
@@ -8,6 +8,6 @@
 	</div>
 	<div class="modal-footer">
 	    <button autofocus class="btn btn-primary" type="submit">OK</button>
-	    <button class="btn btn-warning" type="button" ng-click="errorModal.cancel()">Cancel</button>
+	    <!-- <button class="btn btn-warning" type="button" ng-click="errorModal.cancel()">Cancel</button> -->
 	</div>
 </form>
