--- a/src/partials/video/video-partials/modals/error-modal.html
+++ b/src/partials/video/video-partials/modals/error-modal.html
@@ -1,12 +1,12 @@
 <form ng-submit="errorModal.ok()">
 	<div class="modal-header">
-		<h2>Attention</h2>
+		<h2>Error</h2>
 	</div>
 	<div class="modal-body">
 	    <p>There was an error retrieving certain video data. Sorry for the inconvenience.</p>
 	</div>
 	<div class="modal-footer">
 	    <button autofocus class="btn btn-primary" type="submit">OK</button>
-	    <button class="btn btn-warning" type="button" ng-click="errorModal.cancel()">Cancel</button>
+	    <!-- <button class="btn btn-warning" type="button" ng-click="errorModal.cancel()">Cancel</button> -->
 	</div>
 </form>
