--- a/src/partials/playlist/playlist.html
+++ b/src/partials/playlist/playlist.html
@@ -6,10 +6,10 @@
 		<p ng-if="!playlist.segName">Using <span class="emph">Local Storage</span></p>
 		<div class="btn-group" role="group" aria-label="...">
 			<button class="btn btn-default btn-storage" ng-if="playlist.isUsingFBase" ng-click="playlist.fbaseSave()">
-				<span ng-if="!playlist.segName">Connect to Firebase</span>
-				<span ng-if="playlist.segName">Disconnect from Firebase</span>
+				<span ng-if="!playlist.segName">Log In / Create Account</span>
+				<span ng-if="playlist.segName">Log Out</span>
 			</button>
-			<button class="btn btn-default btn-storage" ng-click="playlist.handleStorageSettings()">Manage Storage Settings</button>
+			<button class="btn btn-default btn-storage" ng-click="playlist.handleStorageSettings()">Settings</button>
 		</div>
 	</div>
 	<div class="row playlist-section-header">
