--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -482,10 +482,19 @@ body #page-header #header-wrapper #credit {
   .pagination-container .btn-change-page {
     padding: 0.35em; }
 
-.page-selector-container {
+.scroll-top--container {
   position: relative; }
-  .page-selector-container #page-selector {
-    color: rgba(39, 174, 96, 0.7);
+  .scroll-top--container--bar {
+    color: #27ae60;
+    position: fixed;
+    bottom: 0;
+    z-index: 9999;
+    height: 3.5em;
+    width: 7%;
+    left: auto;
+    right: 10%; }
+  .scroll-top--container #page-selector {
+    color: #27ae60;
     position: fixed;
     right: 0;
     bottom: 0;
@@ -496,34 +505,23 @@ body #page-header #header-wrapper #credit {
     display: flex;
     flex-direction: column;
     justify-content: center; }
-    .page-selector-container #page-selector #prev-page, .page-selector-container #page-selector #next-page {
+    .scroll-top--container #page-selector #prev-page, .scroll-top--container #page-selector #next-page {
       font-size: 1em;
       padding: 0.2em; }
-    .page-selector-container #page-selector #prev-page-section, .page-selector-container #page-selector #next-page-section {
+    .scroll-top--container #page-selector #prev-page-section, .scroll-top--container #page-selector #next-page-section {
       display: flex;
       flex-direction: column;
       justify-content: center; }
-    .page-selector-container #page-selector #next-page-section {
+    .scroll-top--container #page-selector #next-page-section {
       text-align: right; }
-      .page-selector-container #page-selector #next-page-section #label-next {
+      .scroll-top--container #page-selector #next-page-section #label-next {
         padding-top: 0.4em; }
-    .page-selector-container #page-selector label {
+    .scroll-top--container #page-selector label {
       margin: 0 0.5em;
       font-size: 0.7em; }
 
 .fixed-page-selector {
   position: fixed; }
-
-#channel-scroll-btn-bar {
-  color: rgba(39, 174, 96, 0.7);
-  position: fixed;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  z-index: 9999;
-  height: 2em;
-  width: 10%;
-  margin: 0 auto; }
 
 @media screen and (min-width: 403px) {
   #map-hud span {
@@ -667,7 +665,8 @@ body #page-header #header-wrapper #credit {
   transition: all 0.5s ease-in-out; }
 
 .scroll-top, .btn-change-page-inner {
-  transition: all 0.5s ease-in-out; }
+  transition: all 0.5s ease-in-out;
+  font-size: 3em; }
 
 .btn-no-style {
   -webkit-appearance: none;
@@ -680,9 +679,8 @@ body #page-header #header-wrapper #credit {
 
 @media screen and (min-width: 1024px) {
   .scroll-top:hover, .btn-change-page-inner:hover {
-    color: #888888;
     cursor: pointer;
-    opacity: 1.0; } }
+    opacity: 1; } }
 
 .my-thumbnail {
   width: 100%;
