--- a/src/partials/search/search-partials/results.html
+++ b/src/partials/search/search-partials/results.html
@@ -127,13 +127,14 @@
 			</div>
 		</div>
 	</div>
-<div class="page-selector-container">
-	<form id="channel-scroll-btn-bar">
+<div class="scroll-top--container">
+	<div class="scroll-top--container--bar">
 		<div class="row">
 			<div class="scroll-top-wrapper col-xs-12">
 				<span class="scroll-top-inner">
-					<i ng-click="search.scrollTo('scroll-point')" class="fa fa-2x fa-arrow-circle-up scroll-top" ng-if="search.scrollBtn"></i>
+					<i ng-click="search.scrollTo('scroll-point')" class="fa fa-2x fa-arrow-up scroll-top" ng-if="search.scrollBtn"></i>
 				</span>
 			</div>
-	</form>
+		</div>
+	</div>
 </div>
