--- a/src/scss/_buttons.scss
+++ b/src/scss/_buttons.scss
@@ -1,5 +1,5 @@
 .scroll-top-wrapper {
-    display: inline-block;
+  display: inline-block;
 	overflow: hidden;
 	text-align: center;
 	-webkit-transition: all 0.5s ease-in-out;
@@ -11,6 +11,7 @@
 
 .scroll-top, .btn-change-page-inner {
 	transition: all 0.5s ease-in-out;
+	font-size: 3em;
 }
 
 .btn-no-style {
@@ -26,8 +27,8 @@
 
 @media screen and ($desktop){
 	.scroll-top:hover, .btn-change-page-inner:hover {
-		color: #888888;
+		// color: #888888;
 		cursor: pointer;
-		opacity: 1.0;
+		opacity: 1;
 	}
 }
