--- a/src/scss/_search.scss
+++ b/src/scss/_search.scss
@@ -295,8 +295,27 @@
 
 }
 
-.page-selector-container {
+.scroll-top--container {
 	position: relative;
+
+	&--bar {
+		color: $my-green;
+		position: fixed;
+		// right: 0;
+		bottom: 0;
+		// left: 0;
+		z-index: 9999;
+		height: 3.5em;
+		width: 7%;
+		// margin: 0 auto;
+		left: auto;
+		right: 10%;
+		
+		// .scroll-top {
+
+		// }
+	}
+
 	#page-selector {
 		color: $my-green;
 		position: fixed;
@@ -334,17 +353,17 @@
 	position: fixed;
 }
 
-#channel-scroll-btn-bar {
-	color: $my-green;
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	left: 0;
-	z-index: 9999;
-	height: 2em;
-	width: 10%;
-	margin: 0 auto;
-}
+// .scroll-top--bar {
+// 	color: $my-green;
+// 	position: fixed;
+// 	right: 0;
+// 	bottom: 0;
+// 	left: 0;
+// 	z-index: 9999;
+// 	height: 2em;
+// 	width: 10%;
+// 	margin: 0 auto;
+// }
 
 @media screen and ($mobile5){
 	#map-hud {
